# minGPT

./: .gitignore  erik_notes.md  play_char.ipynb  play_image.ipynb  play_math.ipynb  pyproject.toml
