[tool.poetry]
name = "mingpt"
version = "0.1.0"
description = ""
authors = ["Andrew Karpathy"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
tqdm = "^4.64.0"
numpy = "^1.22.4"
jupyterlab = "^3.4.3"
ipywidgets = "^7.7.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
